Fix font size in .new class in breaking.css for better visibility

--- a/practice/breaking.css
+++ b/practice/breaking.css
@@ -4,4 +4,5 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
 color: #edb51e;
 text-align: center;
 text-shadow: #edb51e 2px 2px 4px;
+font-size: 40px;
 }
